# django-rating-system

./: MANIFEST.in  README.md  README.rst  setup.cfg
rating/: __init__.py  admin.py  models.py  settings.py  urls.py  views.py
rating/migrations/: 0001_initial.py  0002_config.py  0003_alter_ratingsettings_from_zero.py
rating/static/css/: style.css  style.min.css
rating/static/rating/css/: rating.min.css
rating/static/rating/js/: rating.js  rating.min.js
rating/templates/rating/: rating.html  rating_info.html
rating/templates/rating/info/: info_base.html
rating/templates/rating/rating/: rating.html  rating_info.html
rating/templates/rating/utils/: IMPORTS.html  SCRIPTS.html
rating/templates/utils/: IMPORTS.html  SCRIPTS.html
rating/templatetags/: rating_tags.py
