[metadata]
name = django-rating-system
version = file: VERSION
author = Mahyar Amiri
author_email = mmaahhyyaarr@gmail.com
description = Django rating System, It can be associated with any given model.
long_description = file: README.rst
long_description_content_type= text/x-rst
url = https://github.com/mahyar-amiri/django-rating-system
project_urls =
    Documentation=https://github.com/mahyar-amiri/django-rating-system/README.md
    Source Code=https://github.com/mahyar-amiri/django-rating-system
license = MIT
keywords = django rating rating-system django-rating ratings ratings-system django-ratings ajax

[options]
packages = find:
include_package_data = True
install_requires =
    django
    pillow
zip_safe = False

[options.extras_require]
markdown = markdown

[options.package_data]
mypkg =
    rating/*
